--- a/style.css
+++ b/style.css
@@ -4,11 +4,22 @@ body {
 }
 .topbar {
     background-color: #2c3e50;
+    height: 40px;
 }
 .container {
     max-width: 1130px;
     margin: auto;
-    background-color: red;
+}
+.grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+.logo {
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+.logo img {
+    width: 80px;
 }
 /* User access with Laptop Device */
 @media (min-width: 990px) and (max-width: 1200px) {
