--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     margin: 0px;
     padding: 0px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .topbar {
     background-color: #2c3e50;
@@ -20,6 +21,32 @@ body {
 }
 .logo img {
     width: 80px;
+}
+.topmenu {
+    text-align: right;
+    box-sizing: border-box;
+    height: 40px;
+}
+.topmenu ul {
+    list-style-type: none;
+    margin: 0px;
+    padding: 0px;
+}
+.topmenu ul li {
+    display: inline-block;
+}
+.topmenu ul li a {
+    display: block;
+    color: #ffffff;
+    text-decoration: none;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    padding-left: 10px;
+    padding-right: 10px;
+    font-size: 12px;
+}
+.topmenu ul li a:hover {
+    background-color: black;
 }
 /* User access with Laptop Device */
 @media (min-width: 990px) and (max-width: 1200px) {
