--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body {
     list-style-type: none;
     margin: 0px;
     padding: 0px;
+    position: relative;
 }
 .topmenu ul li {
     display: inline-block;
@@ -47,6 +48,33 @@ body {
 }
 .topmenu ul li a:hover {
     background-color: black;
+}
+.topmenu ul ul {
+    background-color: red;
+    display: none;
+    position: absolute;
+    width: 150px;
+}
+.topmenu li:hover ul {
+    display: block;
+}
+.topmenu li:hover a {
+    background-color: black;
+}
+.topmenu li:hover ul li {
+    display: block;
+}
+.topmenu li:hover ul li a {
+    display: block;
+    text-align: left;
+    padding-top: 6px;
+    padding-bottom: 6px;
+    padding-left: 10px;
+    padding-right: 10px;
+    background-color: gray;
+}
+.topmenu li:hover ul li a:hover {
+    background-color: rgb(30, 147, 230);
 }
 /* User access with Laptop Device */
 @media (min-width: 990px) and (max-width: 1200px) {
